--- a/launcher.json
+++ b/launcher.json
@@ -1,6 +1,6 @@
 {
     "version": "1.0.1",
     "url": "https://www.dropbox.com/s/твоя_ссылка/update.zip?dl=1",
-    "mandatory": false,
+    "mandatory": true,
     "news": "Данное обновление обязательно к загрузке"
 }
