--- a/launcher.json
+++ b/launcher.json
@@ -1,6 +1,6 @@
 {
-  "version": "1.0.2",
+  "version": "2.0.0",
   "url": "https://disk.yandex.ru/d/xngbkawkpQ3T7Q",
   "enabled": false,
-  "description": "Важное обновление! Рекомендуем обновить лаунчер."
+  "description": "Обновление 2.0.0"
 }
