--- a/update_launcher.json
+++ b/update_launcher.json
@@ -1,6 +1,6 @@
 {
-    "version": "1.0.1",
-    "url": "https://www.dropbox.com/",
-    "notes": "Обновление дизайна и исправление ошибок.",
+    "version": "1.1.0",
+    "url": "https://www.dropbox.com/scl/fi/rfl20i4jwgil20nq7k3gq/Grand-Launcher-Setup-1.1.0.exe?rlkey=1t7gkae1x01ia8k35xv2jane6&st=ye1y1ukv&dl=1",
+    "notes": "Обновили код, пофиксили ошибки.",
     "required": false
 }
